tests/baselines/reference/jsFileCompilationAmbientVarDeclarationSyntax.errors.txt
tests/cases/compiler/a.js(1,1): error TS8009: 'declare' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    declare var v;
    ~~~~~~~
!!! error TS8009: 'declare' can only be used in a .ts file.